--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
-    <section class="landing_section">
+    <section class="landing_section" id="home">
       <div class="landing_text">
         <h1>Hey, I'm <span class="name">Tom</span> 👋</h1>
         <h2 class="fadeText" id="changingText"></h2>
@@ -40,7 +40,7 @@
       </div>
       <img class="landing_picture shaping" src="me.png" alt="" />
     </section>
-    <section class="services_section">
+    <section class="services_section" id="services">
       <h1>My <span class="name">Services</span></h1>
       <div class="row">
         <div class="card">
@@ -72,6 +72,61 @@
             guidance on how to handle their social media platforms to grow.
           </p>
         </div>
+      </div>
+    </section>
+    <section id="projects">
+      <h1>My <span class="name">projects</span></h1>
+      <div class="row">
+        <div class="card_project">
+          <img
+            class="card_project_img"
+            style="transform: translateY(10%)"
+            src="ig.png"
+            alt=""
+          />
+          <div class="card_project-description-background"></div>
+          <div class="card_project-description">
+            <h4>
+              Instagram
+              <a href="#" class="icon"><i class="bi bi-instagram"></i></a>
+            </h4>
+            <p>
+              My bussiness Instagram account. I post there my work and also
+              other content related to my work. I consider this account as
+              really successful project.
+            </p>
+          </div>
+        </div>
+        <div class="card_project">
+          <img class="card_project_img gh" src="gh.png" alt="" />
+          <div class="card_project-description-background"></div>
+          <div class="card_project-description">
+            <h4>
+              Github
+              <a href="#" class="icon"><i class="bi bi-github"></i></a>
+            </h4>
+            <p>
+              All my personal projects are stored on my Github account. I use
+              Github for version control and also for sharing my work with
+              others.
+            </p>
+          </div>
+        </div>
+        <div class="card_project">
+          <img class="card_project_img" src="carma.png" alt="" />
+          <div class="card_project-description-background"></div>
+          <div class="card_project-description">
+            <h4>
+              Car Managment App
+              <a href="#" class="icon"><i class="bi bi-github"></i></a>
+            </h4>
+            <p>
+              Angular/.Net app used external validation service. App used for
+              Company Car managment.
+            </p>
+          </div>
+        </div>
+        <div class="card_project"></div>
       </div>
     </section>
   </body>
