--- a/index.html
+++ b/index.html
@@ -161,5 +161,16 @@
         </div>
       </div>
     </section>
+    <section  id="contact">
+      <div class="card_contact">
+          <h1>Contact <span class="name">me</span></h1>
+          <p>Feel free to contact me on any of the following platforms or Instagram:
+            <ul>
+                <li>Email: codin.with.tom@gmail.com</li>
+                <li>Discord: code.with.tom</li>
+            </ul>
+          </p>
+      </div>
+    </section>
   </body>
 </html>
