--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="services_section" id="services">
       <h1>My <span class="name">Services</span></h1>
-      <div class="row">
+      <div class="row fadein">
         <div class="card">
           <i class="bi bi-globe"></i>
           <h2>Website Creation</h2>
@@ -83,7 +83,7 @@
     </section>
     <section id="projects">
       <h1>My <span class="name">projects</span></h1>
-      <div class="row">
+      <div class="row slidein">
         <div class="card_project">
           <a
             href="https://www.instagram.com/tom.is.coding/"
@@ -161,15 +161,17 @@
         </div>
       </div>
     </section>
-    <section  id="contact">
-      <div class="card_contact">
-          <h1>Contact <span class="name">me</span></h1>
-          <p>Feel free to contact me on any of the following platforms or Instagram:
-            <ul>
-                <li>Email: codin.with.tom@gmail.com</li>
-                <li>Discord: code.with.tom</li>
-            </ul>
-          </p>
+    <section id="contact">
+      <div class="card_contact popup">
+        <h1>Contact <span class="name">me</span></h1>
+        <p>
+          Feel free to contact me on any of the following platforms or
+          Instagram:
+        </p>
+        <ul>
+          <li>Email: codin.with.tom@gmail.com</li>
+          <li>Discord: code.with.tom</li>
+        </ul>
       </div>
     </section>
   </body>
