--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             ><i class="bi bi-youtube"></i
           ></a>
         </div>
-        <button class="btn-primary popIn">Download CV</button>
+        <button class="btn-primary popIn">CV Soon</button>
       </div>
       <img class="landing_picture shaping" src="me.png" alt="" />
     </section>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="card_project">
-          <a href="https://github.com/Xokhezi" class="card_project-button"
+          <a href="https://github.com/Xokhezi/carma" class="card_project-button"
             >Go there</a
           >
           <img class="card_project_img" src="carma.png" alt="" />
