--- a/index.html
+++ b/index.html
@@ -15,10 +15,34 @@
     <nav>
       <h3 class="header_nav">Tomáš Němec</h3>
       <ul>
-        <li><a href="#home" class="nav-link active">Home</a></li>
-        <li><a href="#services" class="nav-link">Services</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li>
+          <a
+            href="https://xokhezi.github.io/Portfolio/#home"
+            class="nav-link active"
+            >Home</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://xokhezi.github.io/Portfolio/#services"
+            class="nav-link"
+            >Services</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://xokhezi.github.io/Portfolio/#projects"
+            class="nav-link"
+            >Projects</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://xokhezi.github.io/Portfolio/#contact"
+            class="nav-link"
+            >Contact</a
+          >
+        </li>
       </ul>
     </nav>
     <section class="landing_section" id="home">
