--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li>
           <a
             href="https://xokhezi.github.io/Portfolio/index.html#contacts"
+            onclick="window.open('xokhezi.github.io/Portfolio/index.html#contacts', '_self');"
             class="nav-link"
             >Contact</a
           >
