--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </li>
         <li>
           <a
-            href="https://xokhezi.github.io/Portfolio/index.html#contacts"
-            onclick="window.open('xokhezi.github.io/Portfolio/index.html#contacts', '_self');"
+            href="index.html#contacts"
+            onclick="window.open('index.html#contacts', '_self');"
             class="nav-link"
             >Contact</a
           >
