--- a/index.html
+++ b/index.html
@@ -17,29 +17,32 @@
       <ul>
         <li>
           <a
-            href="https://xokhezi.github.io/Portfolio/index.html#services#home"
+            href="#home"
+            onclick="window.open('#home', '_self');"
             class="nav-link active"
             >Home</a
           >
         </li>
         <li>
           <a
-            href="https://xokhezi.github.io/Portfolio/index.html#services"
+            href="#services"
+            onclick="window.open('#services', '_self');"
             class="nav-link"
             >Services</a
           >
         </li>
         <li>
           <a
-            href="https://xokhezi.github.io/Portfolio/index.html#projects"
+            href="#projects"
+            onclick="window.open('#projects', '_self');"
             class="nav-link"
             >Projects</a
           >
         </li>
         <li>
           <a
-            href="index.html#contacts"
-            onclick="window.open('index.html#contacts', '_self');"
+            href="#contact"
+            onclick="window.open('#contacts', '_self');"
             class="nav-link"
             >Contact</a
           >
