--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li>
           <a
             href="#contact"
-            onclick="window.open('#contacts', '_self');"
+            onclick="window.open('#contact', '_self');"
             class="nav-link"
             >Contact</a
           >
