--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <h3 class="header_nav">Tomáš Němec</h3>
-      <ul>
+      <!--<ul>
         <li>
           <a
             href="#home"
@@ -48,7 +48,7 @@
           >
         </li>
       </ul>
-    </nav>
+    --></nav>
     <section class="landing_section" id="home">
       <div class="landing_text">
         <h1>Hey, I'm <span class="name">Tom</span> 👋</h1>
